@@ -28,6 +28,7 @@ import com.badlogic.gdx.graphics.g3d.utils.RenderableSorter;
 import com.badlogic.gdx.graphics.g3d.utils.ShaderProvider;
 import com.badlogic.gdx.utils.Array;
 import com.badlogic.gdx.utils.Disposable;
+import com.badlogic.gdx.utils.FlushablePool;
 import com.badlogic.gdx.utils.GdxRuntimeException;
 import com.badlogic.gdx.utils.Pool;
 
@@ -41,9 +42,7 @@ import com.badlogic.gdx.utils.Pool;
  * 
  * @author xoppa, badlogic */
 public class ModelBatch implements Disposable {
-	protected static class RenderablePool extends Pool<Renderable> {
-		protected Array<Renderable> obtained = new Array<Renderable>();
-
+	protected static class RenderablePool extends FlushablePool<Renderable> {
 		@Override
 		protected Renderable newObject () {
 			return new Renderable();
@@ -56,13 +55,7 @@ public class ModelBatch implements Disposable {
 			renderable.material = null;
 			renderable.meshPart.set("", null, 0, 0, 0);
 			renderable.shader = null;
-			obtained.add(renderable);
 			return renderable;
-		}
-
-		public void flush () {
-			super.freeAll(obtained);
-			obtained.clear();
 		}
 	}
 
